[package]
name = "steg"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20 = "0.9"
rustfft = "6.0"
jpeg-encoder = "0.6"
image = "0.24"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
base64 = "0.21"
# Using simple repetition coding instead of fountain codes for now

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
