[package]
name = "steg"
version = "0.1.0"
edition = "2021"
description = "A robust steganography tool using DCT with ChaCha20 encryption and repetition coding"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/Asim-Shaik/Steganography-CLI.git"
keywords = ["steganography", "dct", "encryption", "chacha20", "jpeg"]
categories = ["multimedia::images", "cryptography"]

[[bin]]
name = "steg"
path = "src/main.rs"

[lib]
name = "steg"
path = "src/lib.rs"

[dependencies]
chacha20 = "0.9"
rustfft = "6.0"
jpeg-encoder = "0.6"
image = "0.24"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
base64 = "0.21"
# Using simple repetition coding instead of fountain codes for now

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
